--- a/public/css/main.css
+++ b/public/css/main.css
@@ -279,6 +279,16 @@ header {
   text-align: left;
 }
 
+.asterisk {
+  display: -ms-inline-grid;
+  display: inline-grid;
+  vertical-align: middle;
+  font-family: "Courgette", Arial, Helvetica, sans-serif;
+  padding-top: 8px;
+  font-weight: normal;
+  font-size: 26px;
+}
+
 .see-details-wrapper {
   border: 1px solid #CCCCCC;
   height: 50px;
@@ -1251,9 +1261,6 @@ h6 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   width: 100%;
-  -webkit-column-gap: 10px;
-          column-gap: 10px;
-  row-gap: 10px;
   margin: 6px auto;
 }
 
@@ -1263,6 +1270,8 @@ h6 {
   padding: 2px 10px;
   border: 1px solid #986B6E;
   display: inline-block;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .arrow-list-wrapper {
@@ -1274,14 +1283,13 @@ h6 {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-column-gap: 10px;
-          column-gap: 10px;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
 }
 
 .arrow-list-wrapper .arrow-list img {
+  margin-right: 10px;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -1400,13 +1408,12 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-column-gap: 15px;
-          column-gap: 15px;
   padding: 10px;
   margin-bottom: 80px;
 }
 
 .product-wrapper .product-img {
+  margin-right: 15px;
   height: 62px;
   width: auto;
 }
@@ -1512,9 +1519,11 @@ h6 {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -webkit-column-gap: 30px;
-          column-gap: 30px;
   padding-right: 20px;
+}
+
+.product-wrapper-lg .product-details-lg .product-buy-link span {
+  margin-right: 30px;
 }
 
 .product-wrapper-lg .product-details-lg .product-buy-link img {
@@ -1778,13 +1787,12 @@ h6 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-column-gap: 30px;
-          column-gap: 30px;
   text-decoration: none;
   color: #444444;
 }
 
 .see-articles-wrapper .see-articles span {
+  margin-right: 30px;
   width: 246px;
   text-align: center;
 }
@@ -2521,8 +2529,6 @@ body {
   .product-wrapper {
     height: 100%;
     padding: 15px;
-    -webkit-column-gap: 21px;
-            column-gap: 21px;
   }
 }
 
@@ -2539,6 +2545,7 @@ body {
 
 @media (min-width: 768px) {
   .product-wrapper .product-img {
+    margin-right: 21px;
     height: 100px;
     width: 150px;
   }
@@ -2571,11 +2578,15 @@ body {
         -ms-flex-direction: row;
             flex-direction: row;
     height: unset;
-    -webkit-column-gap: 40px;
-            column-gap: 40px;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+  }
+}
+
+@media (min-width: 768px) {
+  .product-wrapper-lg .product-img-lg {
+    margin-right: 40px;
   }
 }
 
